Created better organization for api-docs
